--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.16.1",
@@ -48,5 +49,8 @@
     "stylus-loader": "^3.0.1",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "timer-stopwatch": "^0.2.0"
   }
 }
