--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/wkoutre/react-redux-workout-app#readme",
   "devDependencies": {
     "autoprefixer": "^6.7.7",
+    "autoprefixer-stylus": "^0.13.0",
     "babel-cli": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-latest": "^6.24.1",
