--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "json-loader": "^0.5.4",
     "postcss-loader": "^1.3.3",
     "prop-types": "^15.5.8",
+    "re-base": "^2.7.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
