--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "autoprefixer": "^6.7.7",
     "autoprefixer-stylus": "^0.13.0",
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^0.28.0",
     "history": "^4.6.1",
     "json-loader": "^0.5.4",
