--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "connected-react-router": "^4.2.1",
     "css-loader": "^0.28.0",
     "history": "^4.6.1",
     "json-loader": "^0.5.4",
