--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/wkoutre/react-redux-workout-app#readme",
   "devDependencies": {
+    "@types/lodash": "4.14.50",
     "autoprefixer": "^6.7.7",
     "autoprefixer-stylus": "^0.13.0",
     "babel-cli": "^6.24.1",
@@ -35,6 +36,7 @@
     "css-loader": "^0.28.0",
     "history": "^4.6.1",
     "json-loader": "^0.5.4",
+    "lodash": "^4.17.4",
     "postcss-loader": "^1.3.3",
     "prop-types": "^15.5.8",
     "re-base": "^2.7.0",
@@ -53,6 +55,8 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
+    "redux-debounce": "^1.0.1",
     "timer-stopwatch": "^0.2.0"
   }
 }
