--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "css-loader": "^0.28.0",
     "facebook-node": "0.0.3",
     "fb": "^2.0.0",
+    "file-loader": "^0.11.1",
     "history": "^4.6.1",
+    "img-loader": "^2.0.0",
     "json-loader": "^0.5.4",
     "lodash": "^4.17.4",
     "postcss-loader": "^1.3.3",
@@ -55,10 +57,15 @@
     "style-loader": "^0.16.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
+    "react-bootstrap": "^0.31.0",
     "redux-debounce": "^1.0.1",
     "timer-stopwatch": "^0.2.0"
   }
