--- a/package.json
+++ b/package.json
@@ -43,20 +43,25 @@
     "json-loader": "^0.5.4",
     "lodash": "^4.17.4",
     "postcss-loader": "^1.3.3",
-    "prop-types": "^15.5.8",
+    "prop-types": "^15.5.10",
     "re-base": "^2.7.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-inlinesvg": "^0.6.0",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
+    "react-svg": "^2.1.19",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
     "style-loader": "^0.16.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "svg-injector": "^1.1.3",
+    "svg-inline-loader": "^0.7.1",
+    "svg-inline-react": "^2.1.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5"
