--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-	"presets": ["latest", "stage-0", "react"]
+  "presets": [
+  	"latest", 
+    "es2015",
+    "react",
+    "stage-0"
+  ],
+  "env": {
+    "development": {
+      "presets": [
+        "react-hmre"
+      ]
+    }
+  }
 }
