--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server",
     "styles": "./node_modules/.bin/stylus -u autoprefixer-stylus ./src/css/style.styl -o ./src/css/style.css",
     "styles:watch": "./node_modules/.bin/stylus -u autoprefixer-stylus -w ./src/css/style.styl -o ./src/css/style.css",
-    "build": "webpack --config ./webpack.config.js --progress --colors"
+    "build": "webpack --config ./webpack.prod.config.js --progress --colors"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,7 @@
     "url": "https://github.com/wkoutre/react-redux-workout-app/issues"
   },
   "homepage": "https://github.com/wkoutre/react-redux-workout-app#readme",
-  "devDependencies": {
+  "dependencies": {
     "@types/lodash": "4.14.50",
     "autoprefixer": "^6.7.7",
     "autoprefixer-stylus": "^0.13.0",
@@ -32,13 +32,17 @@
     "babel-loader": "^7.0.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bootstrap": "^3.3.7",
+    "bootstrap-social": "^5.1.1",
     "connected-react-router": "^4.2.1",
     "crypto": "0.0.3",
     "css-loader": "^0.28.0",
     "facebook-node": "0.0.3",
     "fb": "^2.0.0",
     "file-loader": "^0.11.1",
+    "font-awesome": "^4.7.0",
     "history": "^4.6.1",
     "img-loader": "^2.0.0",
     "json-loader": "^0.5.4",
@@ -47,6 +51,7 @@
     "prop-types": "^15.5.10",
     "re-base": "^2.7.0",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-inlinesvg": "^0.6.0",
     "react-redux": "^5.0.4",
@@ -55,6 +60,7 @@
     "react-router-redux": "^4.0.8",
     "react-svg": "^2.1.19",
     "redux": "^3.6.0",
+    "redux-debounce": "^1.0.1",
     "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
     "style-loader": "^0.16.1",
@@ -63,16 +69,11 @@
     "svg-injector": "^1.1.3",
     "svg-inline-loader": "^0.7.1",
     "svg-inline-react": "^2.1.0",
+    "timer-stopwatch": "^0.2.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.5"
-  },
-  "dependencies": {
-    "bootstrap": "^3.3.7",
-    "bootstrap-social": "^5.1.1",
-    "font-awesome": "^4.7.0",
-    "react-bootstrap": "^0.31.0",
-    "redux-debounce": "^1.0.1",
-    "timer-stopwatch": "^0.2.0"
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-hot-middleware": "^2.18.0"
   }
 }
