--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "start": "webpack-dev-server --config webpack.dev.config.js",
     "styles": "./node_modules/.bin/stylus -u autoprefixer-stylus ./src/css/style.styl -o ./src/css/style.css",
     "styles:watch": "./node_modules/.bin/stylus -u autoprefixer-stylus -w ./src/css/style.styl -o ./src/css/style.css",
-    "build": "webpack --config ./webpack.prod.config.js --progress --colors"
+    "clean-public": "npm run remove-public && mkdir public",
+    "remove-public": "node_modules/.bin/rimraf ./public",
+    "build:html": "babel-node tools/buildHtml.js",
+    "prebuild": "npm-run-all clean-public build:html",
+    "build": "babel-node tools/build.js",
+    "postbuild": "babel-node tools/publicServer.js"
   },
   "repository": {
     "type": "git",
@@ -29,24 +34,34 @@
     "autoprefixer": "^6.7.7",
     "autoprefixer-stylus": "^0.13.0",
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-polyfill": "6.8.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^3.3.7",
     "bootstrap-social": "^5.1.1",
+    "cheerio": "^0.20.0",
+    "colors": "1.1.2",
+    "compression": "^1.6.1",
     "connected-react-router": "^4.2.1",
     "crypto": "0.0.3",
     "css-loader": "^0.28.0",
+    "express": "4.13.4",
     "facebook-node": "0.0.3",
     "fb": "^2.0.0",
     "file-loader": "^0.11.1",
     "font-awesome": "^4.7.0",
+    "fs": "0.0.1-security",
     "history": "^4.6.1",
     "img-loader": "^2.0.0",
     "json-loader": "^0.5.4",
     "lodash": "^4.17.4",
+    "npm-run-all": "^4.0.2",
+    "open": "0.0.5",
+    "path": "^0.12.7",
     "postcss-loader": "^1.3.3",
     "prop-types": "^15.5.10",
     "re-base": "^2.7.0",
@@ -63,6 +78,7 @@
     "redux-debounce": "^1.0.1",
     "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
+    "serve-favicon": "^2.3.0",
     "style-loader": "^0.16.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
