--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "img-loader": "^2.0.0",
     "json-loader": "^0.5.4",
     "lodash": "^4.17.4",
+    "node-geocoder": "^3.16.0",
     "npm-run-all": "^4.0.2",
     "open": "0.0.5",
     "path": "^0.12.7",
