--- a/package.json
+++ b/package.json
@@ -92,5 +92,8 @@
     "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.18.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1"
   }
 }
